# pork

./: CMakeLists.txt  README.md  main.cpp
AI_part/: AI_part_VirtualBase.cpp  AI_part_VirtualBase.h  AL_part.cpp  AL_part.h
UI_part/: Mat_list.cpp  Mat_list.h  UI_VirtualBase.cpp  UI_VirtualBase.h  UI_widgets.cpp  UI_widgets.h
vision_parts/: recognize_part.cpp  recognize_part.h  recognize_part_VirtualBase.cpp  recognize_part_VirtualBase.h  study_part.cpp  study_part.h  study_part_VirtualBase.cpp  study_part_VirtualBase.h
